--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="theme-color" content="#000000" />
+<link rel="icon" href="/iz-logo.svg" />
+<meta property="og:title" content="IZ Hair Trend" />
+<meta property="og:description" content="Futuristic hairstyling system — Portfolio • Shop • Education • Contacts" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="/og.png" />
+<meta property="og:url" content="https://i-zhairtrend.vercel.app/" />
+<meta name="twitter:card" content="summary_large_image" />
+
     <title>IZ Hair Trend</title>
     <meta name="description" content="Futuristic hairstyling system — IZ HAIR TREND" />
   </head>
